--- a/SimpleUI/app/src/main/res/layout/activity_main.xml
+++ b/SimpleUI/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:textColor="#5b1414"
         android:textColorHighlight="#ca1a1a"
         android:text="click"
-        android:layout_below="@+id/radioGroup"
+        android:layout_below="@+id/checkBox"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -61,5 +61,15 @@
             android:layout_gravity="center_horizontal"
             android:checked="false" />
     </RadioGroup>
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hide Sex"
+        android:id="@+id/checkBox"
+        android:layout_below="@+id/radioGroup"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:checked="false" />
 
 </RelativeLayout>
