--- a/SimpleUI/app/src/main/res/layout/activity_main.xml
+++ b/SimpleUI/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:textColor="#5b1414"
         android:textColorHighlight="#ca1a1a"
         android:text="click"
-        android:layout_below="@+id/checkBox"
+        android:layout_below="@+id/spinner"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -79,5 +79,13 @@
         android:layout_below="@+id/button"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner"
+        android:layout_below="@+id/checkBox"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
