--- a/SimpleUI/app/src/main/res/layout/activity_drink_menu.xml
+++ b/SimpleUI/app/src/main/res/layout/activity_drink_menu.xml
@@ -39,12 +39,10 @@
         android:layout_height="wrap_content"
         android:text="OK"
         android:id="@+id/button3"
+        android:onClick="done"
         android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/priceTextview"
-        android:layout_toEndOf="@+id/priceTextview"
-        android:layout_marginLeft="149dp"
-        android:layout_alignParentRight="true"
-        android:onClick="done" />
+        android:layout_toLeftOf="@+id/button_cancel"
+        android:layout_toStartOf="@+id/button_cancel" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -54,5 +52,16 @@
         android:id="@+id/textView3"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="cancel"
+        android:id="@+id/button_cancel"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:clickable="false"
+        android:onClick="cancel" />
 
 </RelativeLayout>
